# nanovdb-editor

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CODEOWNERS  Dockerfile  README.md  asan_suppressions.txt  build.bat  build.sh  config  includes  vcpkg.json
.github/workflows/: build-and-publish-dev.yml  build-and-publish-wheels.yml  build-and-publish.yml  build-and-test-python.yml  build-and-test.yml  build-fvdb-viz-test-image.yml  build-slang-package-image.yml  build-wheels-check.yml  build-wheels-pr.yml  build-wheels.yml  build_and_test.yml  build_and_test_python.yml  codestyle.yml  fvdb-version-gate.yml  fvdb-viz-integration.yml  nanovdb_editor.yml  rerun-all.yml  workflow-commands.yml
app/: Log.h  Node2Convert.cpp  Node2Convert.h  main.cpp
cmake/: build_config.cmake  dist_utils.cmake  ensure_windows_link.cmake  get_cpm.cmake  get_nanovdb_editor.cmake  link_utils.cmake  packages.cmake  patch_cnpy.cmake  patch_filewatch.cmake  patch_imgui.cmake  repair_symlink.cmake  slang_ep_install.cmake  slang_runtime_macos.cmake  target_utils.cmake  vulkan_loader_macos.cmake
compiler/: CompiledShader.cpp  CompiledShader.h  Compiler.cpp  Compiler.h  SlangCompiler.cpp  SlangCompiler.h  TrackedFileSystem.h
compute/: Compute.cpp  Compute.h  ComputeShader.cpp  ComputeShader.h
compute/shaders/: clear_buffer.slang
dev_utils/: fix_whitespace.py  generate_logo_header.py  run_clang_format.sh  run_format.bat  run_format.sh  setup_gh200.sh  test_lavapipe_windows.ps1  test_wheel_local.sh
docker/: Dockerfile.fvdb_viz_test  Dockerfile.fvdb_viz_test.dockerignore
docs/: adding-a-pipeline.md  editor-pipelines.md
editor/: CameraFrustum.cpp  CameraFrustum.h  CameraStateHandler.h  CodeEditor.cpp  CodeEditor.h  Console.cpp  Console.h  CustomSceneParams.cpp  CustomSceneParams.h  CustomSceneParamsRender.cpp  Editor.cpp  Editor.cpp.orig  Editor.h  EditorImport.h  EditorParamMapRegistry.cpp  EditorParamMapRegistry.h  EditorPipeline.cpp  EditorPipeline.h  EditorScene.cpp  EditorScene.h  EditorSceneManager.cpp  EditorSceneManager.h  EditorToken.h  EditorView.cpp  EditorView.h  EditorWindows.cpp  EditorWindows.h  FileHeaderInfo.cpp  FileHeaderInfo.h  GaussianImport.cpp  ImguiIni.h  ImguiInstance.cpp  ImguiInstance.h  InstanceSettingsHandler.h  MeshImport.cpp  NanoVDBImport.cpp  Node2Verify.cpp  Node2Verify.h  ParamWidget.cpp  ParamWidget.h  (+36 more)
editor/shaders/: editor.slang  editor.slang.json  editor_params.slang  editor_surface.slang  editor_surface.slang.json  ellipsoids.slang  gaussian.slang  gaussian.slang.json  gaussian_voxelize.slang.json  gaussians.slang  gaussians.slang.json  hdda.slang  icosahedron.slang  icosahedron.slang.json  image2d.slang  nanovdb_prepass.slang  nanovdb_sortpass.slang  node2_verify_gpu.slang  node2_verify_gpu_onindex.slang  node2_verify_gpu_ref.slang  spherical_harmonics.slang  voxelbvh.slang  voxelbvh.slang.json  voxelbvh2.slang  voxelbvh_build.slang.json  voxelbvh_common.h  voxelbvh_debug.slang  voxelbvh_debug.slang.json  voxelbvh_gaussians.slang  voxelbvh_gaussians.slang.json  voxelbvh_gaussians_bbox.slang  voxelbvh_gaussians_bbox.slang.json  voxelbvh_lines.slang  voxelbvh_lines.slang.json  voxelbvh_rgba8.slang  voxelbvh_rgba8.slang.json  voxelbvh_slice.slang  voxelbvh_triangle_lines.slang  voxelbvh_triangle_lines.slang.json  voxelbvh_triangles.slang  (+9 more)
fileformat/: FileFormat.cpp  ReaderE57.cpp  ReaderE57.h
gtests/: AbiCompatibilityTest.cpp  CMakeLists.txt  ComputeDispatchCpuInterfaceTest.cpp  ComputeDispatchTest.cpp  ConcurrentPipelineTest.cpp  CustomSceneParamsTest.cpp  EditorHeadlessNonStreamingTest.cpp  EditorSlangCompileSpeedTest.cpp  EditorStartStopTest.cpp  EditorTestSupport.cpp  EditorTestSupport.h  EditorViewSwitchTest.cpp  EditorViewportCameraSyncTest.cpp  FileFormatTest.cpp  GpuTestSupport.cpp  GpuTestSupport.h  MapPinTest.cpp  MultiEditorPipelineRuntimeTest.cpp  PipelineApiTest.cpp  PipelineShaderCompileTest.cpp  PipelineWorkerShutdownTest.cpp  SceneObjectProcessChainTest.cpp  SceneObjectReplacementTest.cpp  SceneObjectSourceTest.cpp  SceneSerializerTest.cpp  ShaderCompileCpuTest.cpp  ShaderCompileTest.cpp  ShaderNameSwapResetsParamsTest.cpp  ShaderParamsReadOnlyTest.cpp  ShaderParamsResetToDefaultsTest.cpp  StreamingUiToViewSyncTest.cpp  VoxelBVHBuildPipelineTest.cpp
gtests/shaders/: test_cpu_interface.slang
imgui/: DynamicBuffer.h  ImguiRenderer.cpp  ImguiRenderer.h  ImguiTLS.h  ImguiWindow.cpp  ImguiWindow.h  ImguiWindowGlfw.cpp  ImguiWindowGlfw.h  LogoTexture.h  Socket.h  UploadBuffer.h
imgui/shaders/: ImguiCS.hlsl  ImguiCopyTextureToBufferCS.hlsl
nanovdb_editor/putil/: Camera.h  Compiler.h  Compute.h  Editor.h  ParallelPrimitives.h  Raster.h  Raster.hpp  Reflect.h  Shader.hpp  VoxelBVH.h  (+1 more)
pymodule/: README.md  dev_environment.yml  environment.yml  pyproject.toml  test_stream.py
pymodule/nanovdb_editor/: __init__.py  compiler.py  compute.py  device.py  editor.py  raster.py  run_editor.py  utils.py
pymodule/test_c/: CMakeLists.txt  main.c
pymodule/test_cpp/: CMakeLists.txt  build.bat  build.sh  main.cpp
pytests/: conftest.py  fvdb_viz_test.py  test_compiler.py  test_dispatch.py  test_editor.py  test_editor_api_2.py  test_editor_headless_non_streaming.py  test_editor_start_stop.py  test_editor_stream_to_file_h264.py  test_fvdb_viz_integration.py  test_matrix.py
raster/: Common.h  GridBuild.cpp  Node2Cpp.h  OctreeBuild.cpp  ParallelPrimitives.cpp  Raster.cpp  Raster.h  Raster2D.cpp  RasterContext.cpp  RasterUtils.cpp  Sphere.h  VoxelBVH.cpp  test_raster.py
scripts/: build_fvdb_viz_test_image.sh  check_fvdb_version_compatibility.py  fvdb_viz_entrypoint.sh  fvdb_viz_versions.sh  run_fvdb_viz_integration.sh  test_openh264_build.sh
server/: EmbeddedFiles.h  ImagePng.h  Server.cpp  Server.h
test/: TestVoxelBVH.cpp  main.cpp  test_editor.py  test_shader.py  test_shader_cpu.py  test_streaming.py
vulkan/: BufferVulkan.cpp  CommonVulkan.h  ComputePipelineVulkan.cpp  ContextVulkan.cpp  DeviceUtilsVulkan.cpp  DeviceVulkan.cpp  DeviceVulkan.h  EncodeVulkan.cpp  EncodeVulkanCPU.cpp  LoaderVulkan.h  PublicDeviceVulkan.cpp  TextureVulkan.cpp
(+129 files in other folders)
